--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "reactjs-popup": "^2.0.6",
     "redux": "^4.2.1",
     "sort-by": "^0.0.2"
   },
