--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "filmapp",
   "private": true,
+  "homepage": "https://markopaunovic1.github.io/FilmApp",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -11,6 +14,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "gh-pages": "^6.0.0",
     "immer": "^10.0.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
